--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Page Not Found | WattSun Solar</title>
-  <link rel="stylesheet" href="main.css">
-  <style>
+<head><meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta charset="utf-8"/>
+<title>Page Not Found | WattSun Solar</title>
+<link href="main.css" rel="stylesheet"/>
+<style>
     body { text-align: center; padding: 4rem 2rem; }
     h1 { font-size: 3rem; margin-top: 2rem; }
     p { font-size: 1.3rem; color: #666; }
@@ -12,9 +13,9 @@
   </style>
 </head>
 <body>
-  <h1>404</h1>
-  <p>Sorry, the page you’re looking for doesn’t exist.</p>
-  <a href="index.html">Back to Home</a>
-  <script src="main.js"></script>
+<h1>404</h1>
+<p>Sorry, the page you’re looking for doesn’t exist.</p>
+<a href="index.html">Back to Home</a>
+<script src="main.js"></script>
 </body>
 </html>
