--- a/checkout.html
+++ b/checkout.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
+
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
 <title>Checkout - WattSun Solar</title>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <link href="main.css" rel="stylesheet"/>
-<style>
-.container {
-  max-width: 900px;
+<style>.container {
+  max-width: 950px;
   width: 98vw;
   margin: 44px auto 0 auto;
   padding: 38px 24px 30px 24px;
@@ -23,103 +25,88 @@ h2 {
   font-weight: bold;
   color: #b47d08;
 }
+/* --- CART TABLE STYLE --- */
 .table-wrapper {
   width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+  box-sizing: border-box;
   background: #fff;
-  margin-bottom: 18px;
-  border-radius: 12px;
+  border-radius: 10px;
 }
-.container table {
+.checkout-table {
   width: 100%;
-  table-layout: fixed;
   border-collapse: separate;
   border-spacing: 0;
   background: #fff;
-  border-radius: 12px;
-  overflow: hidden;
+  margin-bottom: 22px;
+  border-radius: 10px;
   box-shadow: 0 1px 8px rgba(0,0,0,0.07);
-  font-size: 1em;
-  margin: 0;
-  min-width: 0;
-}
-.container th, .container td {
-  padding: 10px 5px;
-  font-size: 1em;
-  white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
-  min-width: 36px;
-  vertical-align: middle;
-  text-align: center;
+  table-layout: auto;
+  font-size: 0.97em;
   box-sizing: border-box;
 }
-th {
+.checkout-table th, .checkout-table td {
+  text-align: left;
+  padding: 14px 12px;
+  border-bottom: 1px solid #f2e2b6;
+  font-size: 1em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.checkout-table th {
   background-color: #f9eabb;
   color: #444;
   font-weight: bold;
-  font-size: 1.05em;
+  text-align: center;
+  vertical-align: middle;
 }
-th.product-col, td.product-col { max-width: 130px; min-width: 90px; }
-th.checkout-desc-tooltip, td.checkout-desc-tooltip { max-width: 110px; min-width: 80px; }
-th.col-unit, td.col-unit { max-width: 90px; min-width: 70px; }
-th.col-qty, td.col-qty { min-width: 38px; max-width: 45px; width: 40px; }
-th.col-total, td.col-total { min-width: 95px; max-width: 120px; }
-th.col-total-deposit, td.col-total-deposit { min-width: 95px; max-width: 120px; }
-td.product-col {
+.checkout-table td.product-col {
   text-align: left;
   font-weight: 500;
-  min-width: 90px;
-  max-width: 130px;
+  min-width: 120px;
+  max-width: 180px;
+  width: 24%;
   word-break: break-word;
   white-space: normal;
 }
-td.checkout-desc-tooltip {
-  position: relative;
-  max-width: 110px;
-  min-width: 80px;
-  cursor: pointer;
-  background: none;
+.checkout-table td.desc-col {
+  min-width: 110px;
+  max-width: 230px;
+  width: 28%;
+  white-space: normal;
 }
-@media (min-width: 700px) {
-  td.checkout-desc-tooltip:hover::after {
-    content: attr(data-desc);
-    position: absolute;
-    left: 0;
-    top: 100%;
-    z-index: 99;
-    min-width: 180px;
-    max-width: 320px;
-    background: #fffbe8;
-    color: #222;
-    border: 1px solid #eccd7e;
-    border-radius: 9px;
-    box-shadow: 0 4px 18px #b47d0844;
-    font-size: 0.99em;
-    padding: 13px 16px;
-    white-space: normal;
-    word-break: break-word;
-    margin-top: 4px;
-    pointer-events: none;
-  }
-  td.checkout-desc-tooltip:hover {
-    background: #fcf6ba;
-    z-index: 20;
-  }
-}
-.total {
+.checkout-table th.compact-col, .checkout-table td.compact-col {
+  width: 70px;
+  min-width: 45px;
+  max-width: 90px;
   text-align: right;
-  margin-top: 10px;
-  font-size: 1.08em;
-  font-weight: bold;
-  color: #1ab13d;
-  letter-spacing: 0.3px;
-  padding-right: 18px;
-  background: #f9eabb;
-  border-radius: 0 0 14px 14px;
-  box-shadow: 0 1px 8px rgba(0,0,0,0.07);
-  max-width: 100%;
-  overflow-x: auto;
+  white-space: nowrap;
+  font-variant-numeric: tabular-nums;
+  padding-left: 0;
+  padding-right: 0;
+  vertical-align: middle;
 }
+.checkout-table th.compact-col {
+  line-height: 1.15;
+}
+.checkout-table th.compact-col br {
+  display: block;
+  margin: 0;
+  padding: 0;
+  content: "";
+}
+@media (max-width: 900px) {
+  .checkout-table th, .checkout-table td { font-size: 0.98em; }
+}
+@media (max-width: 700px) {
+  .checkout-table th, .checkout-table td { padding: 8px 4px; font-size: 0.96em; }
+  .checkout-table td.product-col { min-width: 80px; max-width: 120px; }
+  .checkout-table td.desc-col { min-width: 50px; max-width: 120px; }
+}
+/* --- FORM STYLE (unchanged) --- */
 .checkout-form {
   margin-top: 20px;
 }
@@ -206,7 +193,6 @@ td.checkout-desc-tooltip {
   color: #7a6000 !important;
 }
 @media (max-width:1000px) { .container { max-width: 98vw; padding: 16px 2vw; } }
-/* Hamburger & mobile nav styles */
 .nav-toggle {
   display: none;
   font-size: 2rem;
@@ -256,40 +242,207 @@ td.checkout-desc-tooltip {
   }
 }
 @media (max-width: 700px) {
-  .header-bar h1 {
-    font-size: 1.4em;
-  }
-  th.checkout-desc-tooltip, td.checkout-desc-tooltip { display: none !important; }
-  th.col-desc, td.col-desc, th.col-unit, td.col-unit, th.col-total-deposit, td.col-total-deposit { display: none !important; }
-  td.product-col { width: 54vw !important; min-width: 60px !important; max-width: 100vw !important; }
+  .header-bar h1 { font-size: 1.4em; }
+  .checkout-table td.product-col { min-width: 54vw !important; max-width: 100vw !important; }
   .container, .table-wrapper, table { width: 100vw !important; max-width: 100vw !important; }
-  .checkout-actions {
-    flex-direction: column !important;
-    align-items: center !important;
-    gap: 12px !important;
-  }
-  .checkout-actions .btn,
-  .checkout-actions .loan-btn {
-    width: 80vw !important;
-    max-width: 96vw !important;
-    min-width: 0 !important;
-    font-size: 1em;
-  }
-  .total {
-    font-size: 1em;
-    padding-right: 8vw;
-    padding-left: 1vw;
-  }
-  .table-wrapper, .container table {
-    border-radius: 10px;
+  .checkout-actions { flex-direction: column !important; align-items: center !important; gap: 12px !important; }
+  .checkout-actions .btn, .checkout-actions .loan-btn { width: 80vw !important; max-width: 96vw !important; min-width: 0 !important; font-size: 1em; }
+}
+.total {
+  text-align: right;
+  margin-top: 10px;
+  font-size: 1.08em;
+  font-weight: bold;
+  color: #1ab13d;
+  letter-spacing: 0.3px;
+  padding-right: 18px;
+  background: #f9eabb;
+  border-radius: 0 0 14px 14px;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.07);
+  max-width: 100%;
+  overflow-x: auto;
+}
+/* Cart Icon in NavBar */
+.cart-icon-link {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+.cart-icon {
+  font-size: 1.24em;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.cart-count-badge {
+  position: absolute;
+  top: -0.7em;
+  right: -0.7em;
+  background: #19c37d;
+  color: #fff;
+  font-size: 0.8em;
+  min-width: 1.15em;
+  height: 1.15em;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  box-shadow: 0 0 0.13em #0001;
+  transition: background 0.2s;
+  pointer-events: none;
+  z-index: 1;
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .checkout-table th.desc-col, 
+  .checkout-table td.desc-col {
+    display: none;
   }
 }
+
+@media (max-width: 700px) {
+  .checkout-table th, .checkout-table td {
+    font-size: 0.92em;
+    padding: 6px 6px;
+  }
+  .checkout-table td.product-col {
+    min-width: 40vw !important;
+    max-width: 42vw !important;
+  }
+  .checkout-table th.compact-col, 
+  .checkout-table td.compact-col {
+    min-width: 12vw !important;
+    max-width: 15vw !important;
+    text-align: center;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+  .table-wrapper {
+    overflow-x: auto;
+  }
+}
+
+/* === Mobile Sticky Footer === */
+.mobile-nav {
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile-nav {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    height: 56px;
+    width: 100%;
+    background-color: #f4a940;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+    padding: 0;
+  }
+
+  .mobile-nav a {
+    font-size: 20px;
+    height: 56px;
+    line-height: 56px;
+    padding: 0;
+    margin: 0;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+    position: relative;
+  }
+
+  #cart-count {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    background: red;
+    color: white;
+    font-size: 11px;
+    min-width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    padding: 0 5px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  white-space: nowrap;
+  padding: 6px 12px;
+  margin-left: 10px;
+}
+.brand-name {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: white;
+  white-space: nowrap;
+}
+.site-logo {
+  height: 48px;
+  max-width: 48px;
+  object-fit: contain;
+  vertical-align: middle;
+}
+@media (max-width: 768px) {
+  .logo-container {
+    padding: 4px 12px;
+    height: 56px;
+  }
+  .site-logo {
+    height: auto;
+    max-height: 36px;
+    object-fit: contain;
+  }
+  .brand-name {
+    font-size: 1.3em;
+  }
+}
+    /* === Desktop & Mobile Logo Styles from index.html === */
+    .logo-container { display: none; }
+    .desktop-logo { display: block; }
+    .brand-name { font-size: 1.8em; font-weight: bold; color: white; white-space: nowrap; }
+    .site-logo { height: 48px; max-width: 48px; object-fit: contain; vertical-align: middle; }
+    @media (max-width: 768px) {
+      .desktop-logo { display: none; }
+      .logo-container { display: flex; align-items: center; gap: 12px; white-space: nowrap; padding: 4px 12px; height: 56px; margin-left: 10px; }
+      .site-logo { height: auto; max-height: 36px; object-fit: contain; }
+      .brand-name { font-size: 1.3em; }
+    }
+    @media (max-width: 768px) {
+      h1 img.site-logo { width: auto !important; max-height: 32px !important; margin-right: 8px; }
+    }
 </style>
 </head>
 <body>
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+        WattSun Solar
+      </h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png">
+<span class="brand-name">WattSun Solar</span>
+</img></div>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">WattSun Solar</span>
+</div>
 <button aria-label="Open menu" class="nav-toggle" onclick="toggleNav()">☰</button>
 </div>
 <nav id="mainNav">
@@ -299,33 +452,35 @@ td.checkout-desc-tooltip {
 <a href="financing.html">Financing</a>
 <a href="projects.html">Projects</a>
 <a href="contact.html">Contact</a>
-<span id="cartLinkWrapper" style="display:none;">
-<a href="cart.html">
-    🛒 Cart <span id="cartCount" style="font-weight:bold; background:#3E9F50; color:white; padding:2px 6px; border-radius:50%; font-size:0.8em; vertical-align:top;">0</span>
-</a>
+<!-- Cart Icon START -->
+<a aria-label="View shopping cart" class="cart-icon-link" href="cart.html" title="View cart">
+<span class="cart-icon">
+    🛒
+    <span class="cart-count-badge" id="cart-count-badge">0</span>
 </span>
+</a>
+<!-- Cart Icon END -->
 </nav>
 </header>
 <div class="container">
 <h2>Checkout</h2>
 <div class="table-wrapper">
-<table id="cartTable">
+<table class="checkout-table" id="cartTable">
 <thead>
 <tr>
 <th class="product-col">Product</th>
-<th class="checkout-desc-tooltip">Description</th>
-<th class="col-unit">Unit Price (KES)</th>
-<th>Deposit/Unit (KES)</th>
-<th class="col-qty">Qty</th>
-<th class="col-total">Total Price (KES)</th>
-<th class="col-total-deposit">Total Deposit (KES)</th>
+<th class="desc-col">Description</th>
+<th class="compact-col">Price<br/>(KES)</th>
+<th class="compact-col">Deposit<br/>(KES)</th>
+<th class="compact-col">Qty</th>
+<th class="compact-col">Total<br/>(KES)</th>
 </tr>
 </thead>
 <tbody></tbody>
 </table>
 </div>
 <div class="total" id="totalAmount">Total Deposit: KES 0</div>
-<form action="/thankyou.html" class="checkout-form" data-netlify="true" id="checkoutForm" method="POST" name="order" autocomplete="on">
+<form action="/thankyou.html" autocomplete="on" class="checkout-form" data-netlify="true" id="checkoutForm" method="POST" name="order">
 <input name="form-name" type="hidden" value="order"/>
 <input id="cart_summary" name="cart_summary" type="hidden"/>
 <label for="fullName">Full Name</label>
@@ -378,6 +533,11 @@ document.addEventListener("DOMContentLoaded", function () {
     return Number(num).toLocaleString('en-US');
   }
 
+  // Helper to truncate description for table column
+  function truncateDesc(desc) {
+    return desc && desc.length > 60 ? desc.substring(0, 57) + '...' : desc;
+  }
+
   function renderCart() {
     const cart = JSON.parse(localStorage.getItem("cart")) || [];
     const tbody = document.querySelector("#cartTable tbody");
@@ -387,7 +547,7 @@ document.addEventListener("DOMContentLoaded", function () {
     let cartSummaryArr = [];
 
     cart.forEach(item => {
-      const qty = 1;
+      const qty = item.quantity || 1;
       const desc = item.description || "";
       const deposit = item.deposit;
       const totalPrice = item.price * qty;
@@ -395,18 +555,18 @@ document.addEventListener("DOMContentLoaded", function () {
       totalDeposit += totalItemDeposit;
 
       cartSummaryArr.push(
-        `${item.name} (x1): Price ${item.price}, Deposit ${deposit}`
+        `${item.name} (x${qty}): Price ${item.price}, Deposit ${deposit}`
       );
 
       const row = document.createElement('tr');
       row.innerHTML = `
         <td class="product-col">${item.name}</td>
-        <td class="checkout-desc-tooltip" data-desc="${desc.replace(/"/g, '&quot;')}">${desc}</td>
-        <td class="col-unit">${formatNumber(item.price)}</td>
-        <td>${formatNumber(deposit)}</td>
-        <td class="col-qty">1</td>
-        <td class="col-total">${formatNumber(totalPrice)}</td>
-        <td class="col-total-deposit">${formatNumber(totalItemDeposit)}</td>
+        <td class="desc-col">${truncateDesc(desc)}</td>
+        <td class="compact-col">${formatNumber(item.price)}</td>
+        <td class="compact-col">${formatNumber(deposit)}</td>
+        <td class="compact-col">${qty}</td>
+        <td class="compact-col">${formatNumber(totalPrice)}</td>
+        
       `;
       tbody.appendChild(row);
     });
@@ -441,10 +601,35 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 
+// --- CART BADGE LOGIC ---
+function updateCartCountBadge() {
+  let count = 0;
+  try {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
+  } catch(e){}
+  const badge = document.getElementById('cart-count-badge');
+  if (!badge) return;
+  if (count > 0) {
+    badge.textContent = count;
+    badge.style.display = 'flex';
+  } else {
+    badge.style.display = 'none';
+  }
+}
+document.addEventListener('DOMContentLoaded', updateCartCountBadge);
+window.addEventListener('storage', updateCartCountBadge);
+
 if (window.location.pathname.endsWith("thankyou.html") && sessionStorage.getItem("clearCartOnThankYou")) {
     localStorage.removeItem("cart");
     sessionStorage.removeItem("clearCartOnThankYou");
 }
 </script>
+<footer class="mobile-nav">
+<a aria-label="Home" href="index.html">🏠</a>
+<a aria-label="Account" href="account.html">👤</a>
+<a aria-label="Cart" href="cart.html">🛒<span id="cart-count">2</span></a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
+</footer>
 </body>
 </html>
