--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,14 @@
 
 <html lang="en">
 <head>
-<meta content="width=device-width, initial-scale=1" name="viewport"/><meta charset="utf-8"/>
-<title>Contact Us | WattSun Solar</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta charset="utf-8"/>
+<title>
+   Contact Us | WattSun Solar
+  </title>
 <link href="main.css" rel="stylesheet"/>
 <style>
-    body { background: #FFFAF0; }
+   body { background: #FFFAF0; }
     section { max-width: 950px; margin: 42px auto 0 auto; padding: 0 16px; }
     .contact-container {
       display: flex;
@@ -78,9 +81,424 @@
       .contact-form, .contact-info { width: 100%; min-width: 0; }
       .map { height: 200px; }
     }
+  
+html, body {
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+body { background: #fafafa; }
+.container {
+  max-width: 950px;
+  width: 95vw;
+  margin: 44px auto;
+  padding: 38px 12px 30px 12px;
+  background: #fff;
+  border-radius: 13px;
+  box-shadow: 0 4px 20px rgba(247,183,51,0.10), 0 1.5px 9px rgba(0,0,0,0.04);
+  box-sizing: border-box;
+}
+h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 2em;
+  font-weight: bold;
+  color: #b47d08;
+}
+.table-wrapper {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: auto;
+  box-sizing: border-box;
+  background: #fff;
+  border-radius: 10px;
+}
+table {
+  width: 100%;
+  min-width: 0;
+  border-collapse: separate;
+  border-spacing: 0;
+  background: #fff;
+  margin-bottom: 22px;
+  border-radius: 10px;
+  box-shadow: 0 1px 8px rgba(0,0,0,0.07);
+  overflow: hidden;
+  table-layout: auto;
+  font-size: 0.97em;
+  box-sizing: border-box;
+}
+th, td {
+  text-align: left;
+  padding: 14px 8px;
+  border-bottom: 1px solid #f2e2b6;
+  font-size: 1em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+th {
+  background-color: #f9eabb;
+  color: #444;
+  font-weight: bold;
+  text-align: center;
+}
+/* Compact numeric columns */
+th.compact-col, td.compact-col {
+  width: 68px;
+  min-width: 48px;
+  max-width: 80px;
+  text-align: right;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-variant-numeric: tabular-nums;
+  padding-left: 0;
+  padding-right: 0;
+}
+/* Product column - widest */
+td.product-col {
+  text-align: left;
+  font-weight: 500;
+  min-width: 180px;
+  max-width: 320px;
+  width: 38%;
+  word-break: break-word;
+  white-space: normal;
+}
+.total {
+  text-align: right;
+  margin-top: 15px;
+  font-size: 1.15em;
+  font-weight: bold;
+  color: #3E9F50;
+}
+/* --- Actions (Buttons) --- */
+.actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin-top: 30px;
+  margin-bottom: 36px;
+  width: 100%;
+}
+.actions .btn,
+.actions .btn-clear {
+  min-width: 120px;
+  max-width: 170px;
+  width: auto !important;
+  font-size: 1em;
+  padding: 9px 18px;
+  margin: 0;
+  display: inline-block;
+  box-sizing: border-box;
+}
+.btn {
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  background: linear-gradient(90deg, #f7b733 0%, #fcf6ba 100%);
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 16px rgba(247,183,51, 0.14);
+  letter-spacing: 0.5px;
+  text-decoration: none;
+  transition: background 0.3s, transform 0.2s, box-shadow 0.2s;
+}
+.btn:hover {
+  background: linear-gradient(90deg, #fcf6ba 0%, #f7b733 100%);
+  color: #b37900 !important;
+  transform: translateY(-2px) scale(1.03);
+  box-shadow: 0 6px 20px rgba(247,183,51, 0.20);
+}
+/* Hamburger & mobile nav styles */
+.nav-toggle {
+  display: none;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-left: auto;
+}
+@media (max-width: 800px) {
+  .nav-toggle {
+    display: inline-block;
+    z-index: 1001;
+    position: absolute;
+    top: 18px;
+    right: 20px;
+  }
+  nav {
+    display: none;
+    flex-direction: column;
+    background: #fff;
+    position: absolute;
+    right: 0;
+    top: 60px;
+    width: 80vw;
+    border-radius: 0 0 0 20px;
+    box-shadow: 0 10px 32px #ccc;
+    padding: 30px 0 30px 0;
+    z-index: 1000;
+  }
+  nav.active {
+    display: flex !important;
+  }
+  nav a {
+    margin: 12px 0;
+    font-size: 1.3em;
+    padding-left: 28px;
+    color: #333;
+    border-bottom: 1px solid #eee;
+    width: 100%;
+    display: block;
+    text-align: left;
+  }
+  nav span {
+    display: block;
+    padding-left: 28px;
+    margin: 12px 0 0 0;
+  }
+}
+@media (max-width: 700px) {
+  .container {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    box-sizing: border-box !important;
+  }
+  .table-wrapper {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    overflow-x: auto !important;
+    -webkit-overflow-scrolling: touch;
+    margin-left: 0 !important;
+  }
+  table {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    min-width: 0 !important;
+    box-sizing: border-box !important;
+    table-layout: fixed !important;
+  }
+  .col-unit, .col-total-deposit {
+    display: none;
+  }
+  th, td {
+    font-size: 0.96em;
+    padding: 8px 3px;
+    min-width: 36px;
+    max-width: 90px;
+  }
+  td.product-col {
+    width: 35% !important;
+    min-width: 100px !important;
+    max-width: 180px !important;
+    white-space: nowrap !important;
+  }
+  .actions {
+    flex-direction: column !important;
+    align-items: center !important;
+    gap: 12px !important;
+  }
+  .actions .btn,
+  .actions .btn-clear {
+    width: 80vw !important;
+    max-width: 96vw !important;
+    min-width: 0 !important;
+    font-size: 1em;
+  }
+}
+@media (max-width: 900px) {
+  .container { padding: 18px 5vw; }
+  table th, table td { font-size: 0.98em; }
+  .btn, .btn-clear { width: 100%; margin: 10px 0; }
+}
+@media (max-width: 700px) {
+  .container {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box !important;
+  }
+  .table-wrapper {
+    overflow-x: auto !important;
+    -webkit-overflow-scrolling: touch;
+  }
+  th.col-desc, td.col-desc, th.col-unit, td.col-unit, th.col-total-deposit, td.col-total-deposit {
+    display: none !important;
+  }
+  td.product-col {
+    width: 40% !important;
+    min-width: 80px !important;
+    max-width: 140px !important;
+    white-space: nowrap !important;
+  }
+  table {
+    table-layout: fixed !important;
+  }
+  th, td {
+    padding: 8px 6px !important;
+    font-size: 0.9em !important;
+  }
+  .actions {
+    flex-direction: column !important;
+    align-items: center !important;
+    gap: 12px !important;
+  }
+  .actions .btn, .actions .btn-clear {
+    width: 80vw !important;
+    max-width: 96vw !important;
+    min-width: 0 !important;
+  }
+}
+/* Cart Icon in NavBar */
+.cart-icon-link {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+.cart-icon {
+  font-size: 1.24em;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.cart-count-badge {
+  position: absolute;
+  top: -0.7em;
+  right: -0.7em;
+  background: #19c37d;
+  color: #fff;
+  font-size: 0.8em;
+  min-width: 1.15em;
+  height: 1.15em;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  box-shadow: 0 0 0.13em #0001;
+  transition: background 0.2s;
+  pointer-events: none;
+  z-index: 1;
+  display: none;
+}
+
+/* === Mobile Sticky Footer === */
+.mobile-nav {
+  display: none;
+}
+@media (max-width: 768px) {
+  .mobile-nav {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    height: 56px;
+    width: 100%;
+    background-color: #f4a940;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 1000;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
+    padding: 0;
+  }
+  .mobile-nav a {
+    font-size: 20px;
+    height: 56px;
+    line-height: 56px;
+    padding: 0;
+    margin: 0;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+    position: relative;
+  }
+  #cart-count {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    background: red;
+    color: white;
+    font-size: 11px;
+    min-width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    padding: 0 5px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+        
+nav a:hover,
+nav a:active,
+nav a:focus {
+  color: #00a651;
+  font-weight: bold;
+}
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  white-space: nowrap;
+  padding: 6px 12px;
+  margin-left: 10px;
+}
+.brand-name {
+  font-size: 1.8em;
+  font-weight: bold;
+  color: white;
+  white-space: nowrap;
+}
+.site-logo {
+  height: 48px;
+  max-width: 48px;
+  object-fit: contain;
+  vertical-align: middle;
+}
+@media (max-width: 768px) {
+  .logo-container {
+    padding: 4px 12px;
+    height: 56px;
+  }
+  .site-logo {
+    height: auto;
+    max-height: 36px;
+    object-fit: contain;
+  }
+  .brand-name {
+    font-size: 1.3em;
+  }
+}
+    /* === Desktop & Mobile Logo Styles from index.html === */
+    .logo-container { display: none; }
+    .desktop-logo { display: block; }
+    .brand-name { font-size: 1.8em; font-weight: bold; color: white; white-space: nowrap; }
+    .site-logo { height: 48px; max-width: 48px; object-fit: contain; vertical-align: middle; }
+    @media (max-width: 768px) {
+      .desktop-logo { display: none; }
+      .logo-container { display: flex; align-items: center; gap: 12px; white-space: nowrap; padding: 4px 12px; height: 56px; margin-left: 10px; }
+      .site-logo { height: auto; max-height: 36px; object-fit: contain; }
+      .brand-name { font-size: 1.3em; }
+    }
+    @media (max-width: 768px) {
+      h1 img.site-logo { width: auto !important; max-height: 32px !important; margin-right: 8px; }
+    }
   </style>
 <style>
-/* Fully responsive and rounded input rows */
+   /* Fully responsive and rounded input rows */
 .contact-form input,
 .contact-form textarea {
   width: 94%;
@@ -126,8 +544,9 @@
     padding-left: 5%;
   }
 }
-</style><style>
-/* Left-aligned inputs and textarea */
+  </style>
+<style>
+   /* Left-aligned inputs and textarea */
 .contact-form input,
 .contact-form textarea {
   width: 100%;
@@ -164,12 +583,14 @@
   color: #b37900 !important;
   transform: translateY(-1px) scale(1.02);
 }
-</style><style>
-.contact-info {
+  </style>
+<style>
+   .contact-info {
   text-align: left;
 }
-</style><style>
-/* Stretch form inputs to full width in the container on desktop */
+  </style>
+<style>
+   /* Stretch form inputs to full width in the container on desktop */
 @media (min-width: 901px) {
   .contact-form input,
   .contact-form textarea {
@@ -178,21 +599,69 @@
     border-radius: 12px;
   }
 }
-</style></head>
+  </style>
+<style>
+   /* Ensure fully rounded input fields on all screens */
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  border-radius: 12px;
+  padding: 13px 10px;
+  font-size: 1em;
+  background: #faf9f7;
+  box-sizing: border-box;
+  display: block;
+  margin-bottom: 18px;
+}
+
+/* On mobile: force full width inside container */
+@media (max-width: 768px) {
+  .contact-form input,
+  .contact-form textarea {
+    width: 94vw !important;
+    max-width: 94vw !important;
+    margin: 0 auto 18px auto;
+  }
+}
+  </style>
+</head>
 <body>
 <!-- Header: Unchanged -->
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
-<button aria-label="Open menu" class="nav-toggle">☰</button>
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+     WattSun Solar
+    </h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">
+       WattSun Solar
+      </span>
+</div>
+<button aria-label="Open menu" class="nav-toggle">
+     ☰
+    </button>
 </div>
 <nav>
-<a href="index.html">Home</a>
-<a href="solutions.html">Solutions</a>
-<a href="shop.html">Shop</a>
-<a href="financing.html">Financing</a>
-<a href="projects.html">Projects</a>
-<a href="contact.html">Contact</a>
+<a href="index.html">
+     Home
+    </a>
+<a href="solutions.html">
+     Solutions
+    </a>
+<a href="shop.html">
+     Shop
+    </a>
+<a href="financing.html">
+     Financing
+    </a>
+<a href="projects.html">
+     Projects
+    </a>
+<a href="contact.html">
+     Contact
+    </a>
 <!--<a href="cart.html">🛒 Cart</a>-->
 </nav>
 </header>
@@ -202,40 +671,75 @@
 <!-- Netlify-enabled contact form -->
 <form data-netlify="true" method="POST" name="contact">
 <input name="form-name" type="hidden" value="contact"/>
-<label for="name">Full Name</label>
+<label for="name">
+       Full Name
+      </label>
 <input id="name" name="name" placeholder="Your name" required="" type="text"/>
-<label for="email">Email Address</label>
+<label for="email">
+       Email Address
+      </label>
 <input id="email" name="email" placeholder="you@example.com" required="" type="email"/>
-<label for="phone">Phone Number</label>
+<label for="phone">
+       Phone Number
+      </label>
 <input id="phone" name="phone" placeholder="+254 7XX XXX XXX" type="tel"/>
-<label for="message">Your Message</label>
+<label for="message">
+       Your Message
+      </label>
 <textarea id="message" name="message" placeholder="Tell us about your project..." required="" rows="6"></textarea>
-<button type="submit">Send Inquiry</button>
+<button type="submit">
+       Send Inquiry
+      </button>
 </form>
 </div>
 <div class="contact-info">
-<h3>Our Office</h3>
-<p><strong>WattSun Solar</strong></p>
-<p>Loresho Ridge, next to Qaribu Inn,<br/>Nairobi, Kenya</p>
-<h3>Contact</h3>
-<p style="display: flex; align-items: center; gap: 10px; margin-bottom: 7px;">
-<a class="whatsapp-link" href="https://wa.me/254722761212" rel="noopener" target="_blank" title="Chat with us on WhatsApp"></a>
-<a href="mailto:info@wattsunsolar.co.ke" style="color:inherit; text-decoration:underline; margin-left:2px;">info@wattsunsolar.co.ke</a>
+<h3>
+      Our Office
+     </h3>
+<p>
+<strong>
+       WattSun Solar
+      </strong>
 </p>
-<h3>Office Hours</h3>
-<p>Mon–Sat: 9 AM – 6 PM EAT</p>
+<p>
+      Loresho Ridge, next to Qaribu Inn,
+      <br/>
+      Nairobi, Kenya
+     </p>
+<h3>
+      Contact
+     </h3>
+<p style="display: flex; align-items: center; gap: 10px; margin-bottom: 7px;">
+<a class="whatsapp-link" href="https://wa.me/254722761212" rel="noopener" target="_blank" title="Chat with us on WhatsApp">
+</a>
+<a href="mailto:info@wattsunsolar.co.ke" style="color:inherit; text-decoration:underline; margin-left:2px;">
+       info@wattsunsolar.co.ke
+      </a>
+</p>
+<h3>
+      Office Hours
+     </h3>
+<p>
+      Mon–Sat: 9 AM – 6 PM EAT
+     </p>
 </div>
 </div>
 <div class="map">
-<iframe allowfullscreen="" height="300" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.00815487748!2d36.81667!3d-1.28333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11726626627d%3A0x9ad4d4d4d4d4d4d4!2sNairobi!5e0!3m2!1sen!2ske!4v1590000000000!5m2!1sen!2ske" style="border:0;" width="100%"></iframe>
+<iframe allowfullscreen="" height="300" loading="lazy" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15955.00815487748!2d36.81667!3d-1.28333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f11726626627d%3A0x9ad4d4d4d4d4d4d4!2sNairobi!5e0!3m2!1sen!2ske!4v1590000000000!5m2!1sen!2ske" style="border:0;" width="100%">
+</iframe>
 </div>
 </section>
 <!-- Footer: Unchanged -->
 <footer>
-    © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
+   © 2025 WattSun Solar Kenya |
+   <div class="footer-contacts">
+<a href="mailto:info@wattsun.co.ke">
+     info@wattsun.co.ke
+    </a>
+</div>
 </footer>
 <script>
-  const navToggle = document.querySelector('.nav-toggle');
+   const navToggle = document.querySelector('.nav-toggle');
   const header = document.querySelector('header');
   navToggle.addEventListener('click', function() {
     header.classList.toggle('nav-open');
@@ -243,8 +747,51 @@
   document.querySelectorAll('header nav a').forEach(link => {
     link.addEventListener('click', () => header.classList.remove('nav-open'));
   });
+  </script>
+<script src="main.js">
 </script>
-<script src="main.js"></script>
+<footer class="mobile-nav">
+<a aria-label="Home" href="index.html">
+    🏠
+   </a>
+<a aria-label="Account" href="account.html">
+    👤
+   </a>
+<a aria-label="Cart" href="cart.html">
+    🛒
+    <span id="cart-count">
+     0
+    </span>
+</a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">
+    ☰
+   </a>
+</footer>
+<script>
+   function updateCartCountBadge() {
+  let count = 0;
+  try {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    count = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
+  } catch (e) {}
+
+  const badge = document.getElementById('cart-count-badge');
+  const mobileCount = document.getElementById('cart-count');
+  if (badge) {
+    if (count > 0) {
+      badge.textContent = count;
+      badge.style.display = 'flex';
+    } else {
+      badge.style.display = 'none';
+    }
+  }
+  if (mobileCount) {
+    mobileCount.textContent = count;
+  }
+}
+document.addEventListener('DOMContentLoaded', updateCartCountBadge);
+window.addEventListener('storage', updateCartCountBadge);
+  </script>
 </body>
 </html>
 <!-- End of contact.html -->
