--- a/projects.html
+++ b/projects.html
@@ -2,23 +2,23 @@
 
 <html lang="en">
 <head>
-<meta content="width=device-width, initial-scale=1" name="viewport"/><meta charset="utf-8"/>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>Our Projects | WattSun Solar</title>
 <link href="main.css" rel="stylesheet"/>
 <style>
+    /* Project grid */
     .grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       gap: 28px;
-      margin-top: 36px;
-      margin-bottom: 24px;
+      margin: 36px 0 24px;
     }
     .project {
       background: #fff;
       border-radius: 15px;
       box-shadow: 0 4px 16px rgba(247,183,51,0.11), 0 1.5px 9px rgba(0,0,0,0.04);
       overflow: hidden;
-      text-align: left;
       display: flex;
       flex-direction: column;
       height: 100%;
@@ -30,16 +30,16 @@
       background: #f9eabb;
     }
     .project-info {
-      padding: 22px 18px 15px 18px;
-      flex: 1 1 auto;
+      padding: 22px 18px 15px;
+      flex: 1;
     }
     .project-info h3 {
-      margin: 0 0 10px 0;
+      margin: 0 0 10px;
       font-size: 1.18em;
       color: #3E9F50;
     }
     .project-info p {
-      margin: 6px 0 0 0;
+      margin: 6px 0 0;
       font-size: 1em;
     }
     @media (max-width: 1000px) {
@@ -49,13 +49,141 @@
       .grid { grid-template-columns: 1fr; }
       .project img { height: 140px; }
     }
+
+    /* Base/layout */
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100vw;
+      max-width: 100vw;
+      overflow-x: hidden;
+      font-family: sans-serif;
+      background: #fafafa;
+    }
+    .container {
+      max-width: 950px;
+      width: 95vw;
+      margin: 44px auto;
+      padding: 38px 12px 30px;
+      background: #fff;
+      border-radius: 13px;
+      box-shadow: 0 4px 20px rgba(247,183,51,0.10), 0 1.5px 9px rgba(0,0,0,0.04);
+      box-sizing: border-box;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 2em;
+      font-weight: bold;
+      color: #b47d08;
+    }
+
+    /* Logo styles */
+    .logo-container { display: none; }
+    .desktop-logo  { display: block; }
+    .brand-name    { font-size: 1.8em; font-weight: bold; color: white; white-space: nowrap; }
+    .site-logo     { height: 48px; max-width: 48px; object-fit: contain; vertical-align: middle; }
+    @media (max-width: 768px) {
+      .desktop-logo   { display: none; }
+      .logo-container {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 4px 12px;
+        height: 56px;
+        margin-left: 10px;
+        white-space: nowrap;
+      }
+      .site-logo      { height: auto; max-height: 36px; }
+      .brand-name     { font-size: 1.3em; }
+    }
+    @media (max-width: 768px) {
+      h1 img.site-logo {
+        max-height: 32px !important;
+        margin-right: 8px;
+      }
+    }
+
+    /* Footer normalization */
+    footer { margin-top: 0 !important; }
+
+    /* Hide desktop footer on mobile */
+    @media (max-width: 768px) {
+      footer:not(.mobile-nav) { display: none !important; }
+    }
+
+    /* Mobile sticky nav & badge formatting */
+    .mobile-nav { display: none; }
+    @media (max-width: 768px) {
+      .mobile-nav {
+        display: flex;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 56px;
+        margin: 0;
+        padding: 0;
+        background-color: #f4a940;
+        justify-content: space-around;
+        align-items: center;
+        z-index: 1000;
+        box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+      }
+      .mobile-nav a {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        text-decoration: none;
+        color: black;
+        position: relative;
+        line-height: 1;
+        padding: 0;
+        margin: 0;
+      }
+      /* Cart badge */
+      #cart-count {
+        position: absolute;
+        top: -8px;
+        right: -12px;
+        background: red;
+        color: white;
+        border-radius: 50%;
+        padding: 2px 6px;
+        font-size: 12px;
+        line-height: 1;
+        text-align: center;
+      }
+      /* Adjust badge size */
+      #cart-count {
+        top: 6px;
+        right: 10px;
+        font-size: 11px;
+        min-width: 16px;
+        height: 16px;
+        border-radius: 8px;
+        padding: 0 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
   </style>
 </head>
 <body>
-<!-- Header: From main.css -->
+<!-- Header (index.html) -->
 <header>
 <div class="header-bar">
-<h1>WattSun Solar</h1>
+<h1 class="desktop-logo">
+<img alt="WattSun Solar Logo" src="assets/logo/Wattsun Solar log2.png" style="width: 60px; object-fit: contain; margin-right: 10px;"/>
+        WattSun Solar
+      </h1>
+<div class="logo-container">
+<img alt="WattSun Solar Logo" class="site-logo" src="assets/logo/Wattsun Solar log2.png"/>
+<span class="brand-name">WattSun Solar</span>
+</div>
 <button aria-label="Open menu" class="nav-toggle">☰</button>
 </div>
 <nav>
@@ -65,13 +193,14 @@
 <a href="financing.html">Financing</a>
 <a href="projects.html">Projects</a>
 <a href="contact.html">Contact</a>
-<!--<a href="cart.html">🛒 Cart</a>-->
+<a aria-label="Cart" class="cart-icon-link" href="cart.html">
+<span class="cart-icon">🛒</span>
+<span id="cart-count-desktop" style="font-weight:bold; background:#3E9F50; color:white; padding:2px 6px; border-radius:50%; font-size:0.8em; vertical-align:top; margin-left:4px;"></span></a>
 </nav>
 </header>
-<section>
+<div class="container">
 <h2 class="centered-section-title">Recent Projects</h2>
 <div class="grid">
-<!-- First row: real projects -->
 <div class="project">
 <img alt="Family Home – Karen" src="images/family-home-karen.jpg"/>
 <div class="project-info">
@@ -93,7 +222,6 @@
 <p>Complete off-grid solar with energy storage, ensuring remote hospitality runs smoothly and sustainably.</p>
 </div>
 </div>
-<!-- Second row: placeholder projects -->
 <div class="project">
 <img alt="Project Picture 1" src="images/picture1.jpg"/>
 <div class="project-info">
@@ -116,48 +244,67 @@
 </div>
 </div>
 </div>
-<!-- <div style="text-align:center;">
-      <a class="gold-btn" href="#">View More Projects</a>
-    </div>-->
-</section>
-<!-- Footer: From main.css -->
+</div>
+<!-- Desktop footer (index.html) -->
 <footer>
-    © 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
+<div class="footer-contacts">
+<a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a>
+</div>
+<p>© 2025 WattSun Solar. All rights reserved.</p>
 </footer>
-
+<!-- Mobile sticky footer (index.html) -->
+<footer class="mobile-nav">
+<a aria-label="Home" href="index.html">🏠</a>
+<a aria-label="Account" href="account.html">👤</a>
+<a aria-label="Cart" href="cart.html">🛒<span id="cart-count" style="position: absolute; top: 6px; right: 10px; background: red; color: white; font-size: 11px; min-width: 16px; height: 16px; border-radius: 8px; padding: 0 5px; text-align: center; display: flex; align-items: center; justify-content: center;">0</span></a>
+<a aria-label="Menu" href="javascript:void(0);" onclick="document.querySelector('.nav-toggle').click();">☰</a>
+</footer>
 <script>
-  const navToggle = document.querySelector('.nav-toggle');
-  const header = document.querySelector('header');
-  navToggle.addEventListener('click', function() {
-    header.classList.toggle('nav-open');
-  });
-  document.querySelectorAll('header nav a').forEach(link => {
-    link.addEventListener('click', () => header.classList.remove('nav-open'));
-  });
-</script>
-<script src="main.js">
+function updateCartCountBadge() {
+  let count = 0;
+  try {
+    const rawCart = localStorage.getItem("cart");
+    const cart = JSON.parse(rawCart) || [];
+    count = cart.reduce((sum, item) =>
+      sum + (item.quantity !== undefined ? item.quantity : 1), 0);
+    console.log("🧮 Updated cart count:", count);
+  } catch (e) {
+    console.error("❌ Error reading cart:", e);
+  }
 
-document.addEventListener('DOMContentLoaded', function() {
-  document.body.addEventListener('click', function(e) {
-    const header = document.querySelector('header');
-    if (!header) return;
-    const nav = header.querySelector('nav');
-    const navToggle = header.querySelector('.nav-toggle');
+  const desktopBadge = document.getElementById("cart-count-desktop");
+  if (desktopBadge) desktopBadge.textContent = count;
+
+  const mobileBadge = document.getElementById("cart-count");
+  if (mobileBadge) mobileBadge.innerText = count;
+}
+
+document.addEventListener("DOMContentLoaded", function () {
+  const navToggle = document.querySelector(".nav-toggle");
+  const header = document.querySelector("header");
+  const nav = document.querySelector("header nav");
+
+  if (navToggle && header) {
+    navToggle.addEventListener("click", function (e) {
+      e.stopPropagation();
+      header.classList.toggle("nav-open");
+    });
+  }
+
+  document.body.addEventListener("click", function (e) {
     if (
-      header.classList.contains('nav-open') &&
+      header.classList.contains("nav-open") &&
       !nav.contains(e.target) &&
       !navToggle.contains(e.target)
     ) {
-      header.classList.remove('nav-open');
+      header.classList.remove("nav-open");
     }
   }, true);
+
+  updateCartCountBadge();
+  setTimeout(updateCartCountBadge, 200);
 });
 
-</script>
-</body>
+window.addEventListener("storage", updateCartCountBadge);
+</script></body>
 </html>
-<!-- This HTML file lists some of the projects WattSun Solar has completed, showcasing their expertise in solar solutions. -->
-<!-- The projects include a family home, an industrial factory, and an off-grid lodge, each with a brief description and an image. -->
-<!-- The footer provides contact information and copyright notice. -->
-<!-- The page is styled using an external CSS file (main.css) for consistent design across the site. -->
-&lt;!-- The header includes navigation links to other pages like Home, Solutions, Shop, Projects
